@@ -34,6 +34,7 @@ if(isset($_GET['repo']))
 {
 	readfile(phoromatic_server::find_download_cache());
 	pts_logger::add_to_log($_SERVER['REMOTE_ADDR'] . ' requested a copy of the download cache JSON');
+	exit;
 }
 else if(isset($_GET['download']))
 {
@@ -64,8 +65,41 @@ else if(isset($_GET['download']))
 
 	//pts_logger::add_to_log($requested_file . ' to be downloaded from ' . $file_path);
 	ob_end_clean();
+
+	if(isset($_GET['m']) && $_GET['m'])
+	{
+		header('Content-Description: File Transfer');
+		header('Content-Type: application/octet-stream');
+		header('Content-Disposition: attachment; filename="'. basename($file_path). '"');
+		header('Expires: 0');
+		header('Cache-Control: must-revalidate');
+		header('Pragma: public');
+		header('Content-Length: ' . filesize($file_path));
+	}
+
 	readfile($file_path);
 	exit;
+}
+else
+{
+	echo '<h1>Phoromatic Server Download Cache</h1>';
+	$possible_paths = array(pts_strings::parse_for_home_directory(pts_config::read_user_config('PhoronixTestSuite/Options/Installation/CacheDirectory', PTS_DOWNLOAD_CACHE_PATH)), PTS_DOWNLOAD_CACHE_PATH, PTS_SHARE_PATH . 'download-cache/', '/var/cache/phoronix-test-suite/download-cache/');
+	$files = array();
+	foreach($possible_paths as $possible_path)
+	{
+		foreach(pts_file_io::glob($possible_path . '/*') as $file)
+		{
+			if(is_readable($file))
+			{
+				$basename = basename($file);
+				if(!in_array($basename, $files))
+				{
+					echo '<p><a href="?m=1&download=' . $basename . '">' . $basename . ' </a></p>' . PHP_EOL;
+					array_push($files, $basename);
+				}
+			}
+		}
+	}
 }
 
 ?>
